fix cdc timestamp utc problems